# AppLauncher

./: Cargo.toml  README.md  config.ini
.github/workflows/: rust.yml
src/: app.rs  lib.rs  main.rs  page_api.rs  page_config.rs  page_config_edit.rs  page_main.rs
