[package]
name = "applauncher"
version = "0.1.0"
authors = ["Confused Engineer"]
edition = "2021"
build = "build.rs"

[dependencies]
egui = "0.27.0"
eframe = { version = "0.27.0", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
serde = { version = "1", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
rust-ini = "0.19"
axum = "0.7.4"
tokio = { version = "1.36.0", features = ["full"] }

[build-dependencies]
winres = "0.1"
static_vcruntime = "2.0"


[[bin]]
name = "AppLauncher"
path = "src/main.rs"